--- a/package.json
+++ b/package.json
@@ -1,8 +1,6 @@
 {
-    "name": "@solana/wallet-adapter-example",
+    "name": "solana-swap",
     "version": "0.9.4",
-    "author": "Solana Maintainers <maintainers@solana.foundation>",
-    "repository": "https://github.com/solana-labs/wallet-adapter",
     "license": "Apache-2.0",
     "files": [
         "public",
@@ -28,6 +26,7 @@
         "@craco/craco": "^6.2.0",
         "@material-ui/core": "^4.12.3",
         "@material-ui/icons": "^4.11.2",
+        "@project-serum/serum": "^0.13.59",
         "@solana/wallet-adapter-ant-design": "^0.4.3",
         "@solana/wallet-adapter-base": "^0.5.2",
         "@solana/wallet-adapter-material-ui": "^0.9.3",
@@ -40,13 +39,17 @@
         "@testing-library/user-event": "^12.1.10",
         "@types/bs58": "^4.0.1",
         "@types/jest": "^26.0.15",
+        "@types/lodash-es": "^4.17.4",
         "@types/node": "^12.0.0",
         "@types/react": "^17.0.16",
         "@types/react-dom": "^17.0.0",
         "add": "^2.0.6",
         "antd": "^4.16.13",
+        "bignumber.js": "^9.0.1",
         "bs58": "^4.0.1",
         "craco-less": "^1.18.0",
+        "enquire.js": "^2.1.6",
+        "lodash-es": "^4.17.21",
         "notistack": "^1.0.9",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
