--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
     "dependencies": {
         "@ant-design/icons": "^4.6.4",
         "@craco/craco": "^6.2.0",
+        "@ledgerhq/hw-transport-webusb": "^6.6.0",
         "@material-ui/core": "^4.12.3",
         "@material-ui/icons": "^4.11.2",
         "@project-serum/serum": "^0.13.59",
+        "@solana/spl-token-registry": "^0.2.246",
+        "@solana/spl-token-swap": "^0.1.2",
         "@solana/wallet-adapter-ant-design": "^0.4.3",
         "@solana/wallet-adapter-base": "^0.5.2",
         "@solana/wallet-adapter-material-ui": "^0.9.3",
@@ -43,16 +46,19 @@
         "@types/node": "^12.0.0",
         "@types/react": "^17.0.16",
         "@types/react-dom": "^17.0.0",
+        "@types/react-router-dom": "^5.1.8",
         "add": "^2.0.6",
         "antd": "^4.16.13",
         "bignumber.js": "^9.0.1",
         "bs58": "^4.0.1",
+        "buffer-layout": "^1.2.2",
         "craco-less": "^1.18.0",
         "enquire.js": "^2.1.6",
         "lodash-es": "^4.17.21",
         "notistack": "^1.0.9",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-router-dom": "^5.3.0",
         "react-scripts": "^4.0.3",
         "typescript": "^4.1.2",
         "web-vitals": "^1.0.1",
