--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@ledgerhq/hw-transport-webusb": "^6.6.0",
         "@material-ui/core": "^4.12.3",
         "@material-ui/icons": "^4.11.2",
+        "@orca-so/sdk": "^1.1.1",
         "@project-serum/serum": "^0.13.59",
         "@solana/spl-token-registry": "^0.2.246",
         "@solana/spl-token-swap": "^0.1.2",
